[package]
name = "xhtmlchardet"
description = "Character set detection for XML and HTML"
readme = "README.md"
repository = "https://github.com/wezm/xhtmlchardet"
documentation = "http://doc.wezm.net/xhtmlchardet/"
homepage = "https://github.com/wezm/xhtmlchardet"
version = "1.0.1"
authors = ["Wesley Moore <wes@wezm.net>"]
license = "MIT"
include = [
    "src/*.rs",
    "Cargo.toml",
]

[dependencies]

[dev-dependencies]
toml = { version = "0.2.1", default-features = false, features = ["serde"] }
