[package]
name = "xhtmlchardet"
description = "Character set detection for XML and HTML"
readme = "README.md"
repository = "https://github.com/wezm/xhtmlchardet"
documentation = "https://docs.rs/xhtmlchardet/"
homepage = "https://github.com/wezm/xhtmlchardet"
version = "2.0.0"
authors = ["Wesley Moore <wes@wezm.net>"]
license = "MIT"
include = [
    "src/*.rs",
    "Cargo.toml",
]

[dependencies]

[dev-dependencies]
serde = "0.8"
serde_derive = "0.8"
toml = { version = "0.2.1", default-features = false, features = ["serde"] }
